--- a/lab/public_html/index.html
+++ b/lab/public_html/index.html
@@ -12,116 +12,115 @@
       google.charts.setOnLoadCallback(drawRegionsMap);
 
       function drawRegionsMap() {
-        var data = google.visualization.arrayToDataTable([
-            ['Country', 'Value'],
-            ['Belgium French', 0],
-            ['Belgium Netherlands', 0],
-            ['Germany East', 0],
-            ['Switzerland French', 0],
-            ['Albania', 0],
-            ['Azerbaijan', 0],
-            ['Belarus', 0],
-            ['Belgium', 0],
-            ['Bosnia', 0],
-            ['Burkina Faso', 0],
-            ['Czech Rep', 0],
-            ['Egypt', 0],
-            ['Estonia', 0],
-            ['France', 0],
-            ['Georgia', 0],
-            ['Iraq', 0],
-            ['Italy', 0],
-            ['Kyrgyz Rep', 0],
-            ['Latvia', 0],
-            ['Lithuania', 0],
-            ['Macedonia Rep', 0],
-            ['Moldova', 0],
-            ['Montenegro', 0],
-            ['Poland', 0],
-            ['Ukraine', 0],
-            ['Bulgaria', 1],
-            ['Costa Rica', 1],
-            ['Croatia', 1],
-            ['Greece', 1],
-            ['Guatemala', 1],
-            ['Korea South', 1],
-            ['Malta', 1],
-            ['Pakistan', 1],
-            ['Portugal', 1],
-            ['Romania', 1],
-            ['Russia', 1],
-            ['Serbia', 1],
-            ['Slovenia', 1],
-            ['Spain', 1],
-            ['Suriname', 1],
-            ['Turkey', 1],
-            ['Uruguay', 1],
-            ['Africa East', 2],
-            ['Africa West', 2],
-            ['Arab countries', 2],
-            ['Algeria', 2],
-            ['Argentina', 2],
-            ['Brazil', 2],
-            ['Chile', 2],
-            ['Colombia', 2],
-            ['Dominican Rep', 2],
-            ['Ecuador', 2],
-            ['El Salvador', 2],
-            ['Ghana', 2],
-            ['Iceland', 2],
-            ['Iran', 2],
-            ['Jordan', 2],
-            ['Mali', 2],
-            ['Mexico', 2],
-            ['Morocco', 2],
-            ['Nigeria', 2],
-            ['Panama', 2],
-            ['Peru', 2],
-            ['Puerto Rico', 2],
-            ['Rwanda', 2],
-            ['Saudi Arabia', 2],
-            ['South Africa', 2],
-            ['Tanzania', 2],
-            ['Thailand', 2],
-            ['Trinidad and Tobago', 2],
-            ['Uganda', 2],
-            ['Venezuela', 2],
-            ['Zambia', 2],
-            ['Zimbabwe', 2],
-            ['Armenia', 3],
-            ['China', 3],
-            ['Hong Kong', 3],
-            ['Indonesia', 3],
-            ['Jamaica', 3],
-            ['Singapore', 3],
-            ['Taiwan', 3],
-            ['Vietnam', 3],
-            ['Canada French', 4],
-            ['South Africa white', 4],
-            ['Australia', 4],
-            ['Canada', 4],
-            ['Denmark', 4],
-            ['Finland', 4],
-            ['Great Britain', 4],
-            ['Ireland', 4],
-            ['Netherlands', 4],
-            ['New Zealand', 4],
-            ['Norway', 4],
-            ['Sweden', 4],
-            ['U.S.A.', 4],
-            ['Bangladesh', 5],
-            ['India', 5],
-            ['Malaysia', 5],
-            ['Philippines', 5],
-            ['Slovak Rep', 5],
-            ['Switzerland German', 6],
-            ['Austria', 6],
-            ['Germany', 6],
-            ['Hungary', 6],
-            ['Israel', 6],
-            ['Japan', 6],
-            ['Luxembourg', 6],
-            ['Switzerland', 6]]);
+        var data = google.visualization.arrayToDataTable(
+          [['Country', 'Value'],
+          ['South Africa white', 0],
+          ['Australia', 0],
+          ['Canada', 0],
+          ['Great Britain', 0],
+          ['Ireland', 0],
+          ['New Zealand', 0],
+          ['U.S.A.', 0],
+          ['Africa East', 1],
+          ['Africa West', 1],
+          ['Algeria', 1],
+          ['Colombia', 1],
+          ['Dominican Rep', 1],
+          ['Ecuador', 1],
+          ['El Salvador', 1],
+          ['Ghana', 1],
+          ['Iceland', 1],
+          ['Iran', 1],
+          ['Jordan', 1],
+          ['Malaysia', 1],
+          ['Mali', 1],
+          ['Mexico', 1],
+          ['Nigeria', 1],
+          ['Philippines', 1],
+          ['Puerto Rico', 1],
+          ['Rwanda', 1],
+          ['Saudi Arabia', 1],
+          ['South Africa', 1],
+          ['Tanzania', 1],
+          ['Trinidad and Tobago', 1],
+          ['Uganda', 1],
+          ['Venezuela', 1],
+          ['Zambia', 1],
+          ['Zimbabwe', 1],
+          ['Denmark', 2],
+          ['Finland', 2],
+          ['Netherlands', 2],
+          ['Norway', 2],
+          ['Sweden', 2],
+          ['Armenia', 3],
+          ['Bangladesh', 3],
+          ['Bulgaria', 3],
+          ['China', 3],
+          ['Hong Kong', 3],
+          ['India', 3],
+          ['Indonesia', 3],
+          ['Jamaica', 3],
+          ['Japan', 3],
+          ['Korea South', 3],
+          ['Pakistan', 3],
+          ['Russia', 3],
+          ['Singapore', 3],
+          ['Slovak Rep', 3],
+          ['Taiwan', 3],
+          ['Vietnam', 3],
+          ['Switzerland German', 4],
+          ['Austria', 4],
+          ['Germany', 4],
+          ['Israel', 4],
+          ['Luxembourg', 4],
+          ['Switzerland', 4],
+          ['Belgium French', 5],
+          ['Belgium Netherl', 5],
+          ['Germany East', 5],
+          ['Switzerland French', 5],
+          ['Albania', 5],
+          ['Azerbaijan', 5],
+          ['Belarus', 5],
+          ['Belgium', 5],
+          ['Bosnia', 5],
+          ['Burkina Faso', 5],
+          ['Czech Rep', 5],
+          ['Egypt', 5],
+          ['Estonia', 5],
+          ['France', 5],
+          ['Georgia', 5],
+          ['Hungary', 5],
+          ['Iraq', 5],
+          ['Italy', 5],
+          ['Kyrgyz Rep', 5],
+          ['Latvia', 5],
+          ['Lithuania', 5],
+          ['Macedonia Rep', 5],
+          ['Moldova', 5],
+          ['Montenegro', 5],
+          ['Poland', 5],
+          ['Ukraine', 5],
+          ['Argentina', 6],
+          ['Brazil', 6],
+          ['Chile', 6],
+          ['Costa Rica', 6],
+          ['Croatia', 6],
+          ['Greece', 6],
+          ['Guatemala', 6],
+          ['Malta', 6],
+          ['Morocco', 6],
+          ['Panama', 6],
+          ['Peru', 6],
+          ['Portugal', 6],
+          ['Romania', 6],
+          ['Serbia', 6],
+          ['Slovenia', 6],
+          ['Spain', 6],
+          ['Suriname', 6],
+          ['Thailand', 6],
+          ['Turkey', 6],
+          ['Uruguay', 6]]
+);
 
         var options = {
             colorAxis: {
