--- a/lab/public_html/index.html
+++ b/lab/public_html/index.html
@@ -14,112 +14,112 @@
       function drawRegionsMap() {
         var data = google.visualization.arrayToDataTable(
           [['Country', 'Value'],
-          ['South Africa white', 0],
-          ['Australia', 0],
-          ['Canada', 0],
-          ['Great Britain', 0],
-          ['Ireland', 0],
-          ['New Zealand', 0],
-          ['U.S.A.', 0],
-          ['Africa East', 1],
-          ['Africa West', 1],
-          ['Algeria', 1],
-          ['Colombia', 1],
-          ['Dominican Rep', 1],
-          ['Ecuador', 1],
-          ['El Salvador', 1],
-          ['Ghana', 1],
-          ['Iceland', 1],
-          ['Iran', 1],
-          ['Jordan', 1],
-          ['Malaysia', 1],
-          ['Mali', 1],
-          ['Mexico', 1],
-          ['Nigeria', 1],
-          ['Philippines', 1],
-          ['Puerto Rico', 1],
-          ['Rwanda', 1],
-          ['Saudi Arabia', 1],
-          ['South Africa', 1],
-          ['Tanzania', 1],
-          ['Trinidad and Tobago', 1],
-          ['Uganda', 1],
-          ['Venezuela', 1],
-          ['Zambia', 1],
-          ['Zimbabwe', 1],
-          ['Denmark', 2],
-          ['Finland', 2],
-          ['Netherlands', 2],
-          ['Norway', 2],
-          ['Sweden', 2],
-          ['Armenia', 3],
-          ['Bangladesh', 3],
-          ['Bulgaria', 3],
-          ['China', 3],
-          ['Hong Kong', 3],
-          ['India', 3],
-          ['Indonesia', 3],
-          ['Jamaica', 3],
-          ['Japan', 3],
-          ['Korea South', 3],
-          ['Pakistan', 3],
-          ['Russia', 3],
-          ['Singapore', 3],
-          ['Slovak Rep', 3],
-          ['Taiwan', 3],
-          ['Vietnam', 3],
-          ['Switzerland German', 4],
-          ['Austria', 4],
-          ['Germany', 4],
-          ['Israel', 4],
-          ['Luxembourg', 4],
-          ['Switzerland', 4],
-          ['Belgium French', 5],
-          ['Belgium Netherl', 5],
-          ['Germany East', 5],
-          ['Switzerland French', 5],
-          ['Albania', 5],
-          ['Azerbaijan', 5],
-          ['Belarus', 5],
-          ['Belgium', 5],
-          ['Bosnia', 5],
-          ['Burkina Faso', 5],
-          ['Czech Rep', 5],
-          ['Egypt', 5],
-          ['Estonia', 5],
-          ['France', 5],
-          ['Georgia', 5],
+          ['Armenia', 0],
+          ['Bangladesh', 0],
+          ['China', 0],
+          ['Philippines', 0],
+          ['Hong Kong', 0],
+          ['Malaysia', 0],
+          ['India', 0],
+          ['Indonesia', 0],
+          ['Jamaica', 0],
+          ['Singapore', 0],
+          ['Slovak Rep', 0],
+          ['Taiwan', 0],
+          ['Vietnam', 0],
+          ['Germany East', 1],
+          ['Albania', 1],
+          ['Azerbaijan', 1],
+          ['Belarus', 1],
+          ['Belgium', 1],
+          ['Bosnia', 1],
+          ['Bulgaria', 1],
+          ['Czech Rep', 1],
+          ['Estonia', 1],
+          ['France', 1],
+          ['Korea South', 1],
+          ['Kyrgyz Rep', 1],
+          ['Latvia', 1],
+          ['Lithuania', 1],
+          ['Macedonia Rep', 1],
+          ['Moldova', 1],
+          ['Montenegro', 1],
+          ['Pakistan', 1],
+          ['Russia', 1],
+          ['Ukraine', 1],
+          ['Argentina', 2],
+          ['Brazil', 2],
+          ['Chile', 2],
+          ['Costa Rica', 2],
+          ['Croatia', 2],
+          ['Greece', 2],
+          ['Guatemala', 2],
+          ['Malta', 2],
+          ['Panama', 2],
+          ['Peru', 2],
+          ['Portugal', 2],
+          ['Romania', 2],
+          ['Serbia', 2],
+          ['Slovenia', 2],
+          ['Spain', 2],
+          ['Suriname', 2],
+          ['Thailand', 2],
+          ['Turkey', 2],
+          ['Uruguay', 2],
+          ['Belgium French', 3],
+          ['Switzerland French', 3],
+          ['Algeria', 3],
+          ['Burkina Faso', 3],
+          ['Egypt', 3],
+          ['Georgia', 3],
+          ['Iran', 3],
+          ['Iraq', 3],
+          ['Morocco', 3],
+          ['Poland', 3],
+          ['Zimbabwe', 3],
+          ['Canada French', 4],
+          ['South Africa white', 4],
+          ['Australia', 4],
+          ['Canada', 4],
+          ['Denmark', 4],
+          ['Finland', 4],
+          ['Great Britain', 4],
+          ['Ireland', 4],
+          ['Netherlands', 4],
+          ['New Zealand', 4],
+          ['Norway', 4],
+          ['Sweden', 4],
+          ['U.S.A.', 4],
+          ['Switzerland German', 5],
+          ['Austria', 5],
+          ['Germany', 5],
           ['Hungary', 5],
-          ['Iraq', 5],
+          ['Israel', 5],
           ['Italy', 5],
-          ['Kyrgyz Rep', 5],
-          ['Latvia', 5],
-          ['Lithuania', 5],
-          ['Macedonia Rep', 5],
-          ['Moldova', 5],
-          ['Montenegro', 5],
-          ['Poland', 5],
-          ['Ukraine', 5],
-          ['Argentina', 6],
-          ['Brazil', 6],
-          ['Chile', 6],
-          ['Costa Rica', 6],
-          ['Croatia', 6],
-          ['Greece', 6],
-          ['Guatemala', 6],
-          ['Malta', 6],
-          ['Morocco', 6],
-          ['Panama', 6],
-          ['Peru', 6],
-          ['Portugal', 6],
-          ['Romania', 6],
-          ['Serbia', 6],
-          ['Slovenia', 6],
-          ['Spain', 6],
-          ['Suriname', 6],
-          ['Thailand', 6],
-          ['Turkey', 6],
-          ['Uruguay', 6]]
+          ['Japan', 5],
+          ['Luxembourg', 5],
+          ['Switzerland', 5],
+          ['Africa East', 6],
+          ['Africa West', 6],
+          ['Colombia', 6],
+          ['Dominican Rep', 6],
+          ['Ecuador', 6],
+          ['El Salvador', 6],
+          ['Ghana', 6],
+          ['Iceland', 6],
+          ['Jordan', 6],
+          ['Mali', 6],
+          ['Mexico', 6],
+          ['Nigeria', 6],
+          ['Puerto Rico', 6],
+          ['Rwanda', 6],
+          ['Saudi Arabia', 6],
+          ['South Africa', 6],
+          ['Tanzania', 6],
+          ['Trinidad and Tobago', 6],
+          ['Uganda', 6],
+          ['Venezuela', 6],
+          ['Zambia', 6]]
 );
 
         var options = {
